--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-# Base dependencies
-flask>=2.0.0
+flask>=2.0.3
 flask-cors>=3.0.10
 gunicorn>=20.1.0
 boto3>=1.26.0
 nltk>=3.6.5
-numpy>=1.22.0
+numpy==1.22.0
 scikit-learn>=1.0.1
-transformers>=4.15.0
-torch>=1.10.0
-sentence-transformers>=2.0.0
 rake-nltk>=1.0.4
+torch==1.13.1
+transformers==4.28.1
+huggingface_hub==0.13.4
+sentence-transformers==2.2.2
