--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-flask>=2.0.3
-flask-cors>=3.0.10
-gunicorn>=20.1.0
-boto3>=1.26.0
-nltk>=3.6.5
-numpy==1.22.0
-scikit-learn>=1.0.1
-rake-nltk>=1.0.4
-torch==1.10.0
-transformers==4.28.1
-huggingface_hub==0.13.4
-sentence-transformers==2.2.2
+flask>=2.3.2
+flask-cors>=4.0.0
+gunicorn>=21.2.0
+boto3>=1.28.0
+nltk>=3.8.1
+numpy>=1.24.3
+scikit-learn>=1.2.2
+rake-nltk>=1.0.6
+torch>=2.0.1
+transformers>=4.30.2
+huggingface_hub>=0.15.1
+sentence-transformers>=2.2.2
